@@ -3,6 +3,16 @@ import unittest
 from ctypes import *
 
 class MemFunctionsTest(unittest.TestCase):
+##    def test_overflow(self):
+##        # string_at and wstring_at must use the Python calling
+##        # convention (which acquires the GIL and checks the Python
+##        # error flag).  Provoke an error and catch it; see also issue
+##        # #3554: <http://bugs.python.org/issue3554>
+##        self.assertRaises((OverflowError, MemoryError, SystemError),
+##                          lambda: wstring_at(u"foo", sys.maxint - 1))
+##        self.assertRaises((OverflowError, MemoryError, SystemError),
+##                          lambda: string_at("foo", sys.maxint - 1))
+
     def test_memmove(self):
         # large buffers apparently increase the chance that the memory
         # is allocated in high address space.
